# mpt-machine-learning

./: .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  run_optimization.py
api/: app.py  cache.py  schemas.py
api/routes/: __init__.py  analysis.py  backtest.py  data.py  evaluation.py  health.py  optimization.py  simulation.py
frontend/: package.json  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/backtest/: +page.svelte
frontend/src/routes/optimize/: +page.svelte
frontend/src/routes/visualize/: +page.svelte
notebooks/: mpt_example.ipynb
portfolio_optimization/: __init__.py  config.py
portfolio_optimization/backtesting/: __init__.py  engine.py
portfolio_optimization/data/: __init__.py  collector.py
portfolio_optimization/evaluation/: evaluator.py
portfolio_optimization/models/: __init__.py  factor_strategy.py  ml_optimizer.py  mpt.py  optimal_ml_optimizer.py
portfolio_optimization/risk/: __init__.py  metrics.py
portfolio_optimization/utils/: sector_mapping.py
src/: data_collector.py  ml_portfolio_optimizer.py  portfolio_optimizer.py
tests/: test_api.py  test_evaluation.py  test_models.py  test_optimal_ml.py  test_risk.py
